[gd_scene load_steps=4 format=3 uid="uid://cy1n4u8430i8y"]

[ext_resource type="Script" path="res://scripts/tower/tower.gd" id="1_gs0gi"]
[ext_resource type="PackedScene" uid="uid://cphe7fmhg02up" path="res://scenes/bullet/bullet.tscn" id="2_t3f0g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3d65d"]

[node name="Tower" type="Node2D" node_paths=PackedStringArray("sprite", "col_shape", "shoot_timer")]
script = ExtResource("1_gs0gi")
sprite = NodePath("Sprite2D")
col_shape = NodePath("Area2D/CollisionShape2D")
shoot_timer = NodePath("ShootTimer")
bullet_scene = ExtResource("2_t3f0g")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_3d65d")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
